--- a/task04.html
+++ b/task04.html
@@ -2,26 +2,25 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>task04</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">	
 	<link rel="stylesheet" href="css/style.css">	
 </head>
 <body>
-	<div class="header">
-	
-		<a href="" class=" middle left">关闭</a>
-		<a href="" class=" middle right">注册</a>
-		<span href="" class="middle">登陆</span>
+	<div class="header wide">	
+		<a href="" class="left middle">关闭</a>
+		<a href="" class="right middle">注册</a>
+		<span class="middle">登陆</span>
 	</div>
 	<form method="post" action="">
 	<div class="main">
 			<b><img src="img/iphone.png" alt=""></b>
-			<input type="tel" placeholder="输入密码" class="super-wide text">
+			<input type="tel" placeholder="输入密码" class="wide text">
 	
 			<b><img src="img/locked 2.png" alt=""></b>
-			<input type="password" placeholder="忘记密码" class="super-wide text">
+			<input type="password" placeholder="忘记密码" class="wide text">
 	
-			<button type="submit" class="super-wide backgroundcolor middle">登陆</button>
+			<button type="submit" class="wide backgroundcolor middle">登陆</button>
 			
 	
 			<a href="">忘记密码?</a>
