hand up the file

--- a/task04.html
+++ b/task04.html
@@ -12,15 +12,15 @@
 		<a href="" class="right middle">注册</a>
 		<span class="middle">登陆</span>
 	</div>
-	<form method="post" action="">
+	<form method="get" action="">
 	<div class="main">
 			<b><img src="img/iphone.png" alt=""></b>
-			<input type="tel" placeholder="输入密码" class="wide text">
+			<input name="user" id="username" type="text" placeholder="输入手机号码" class="wide text"/>
 	
 			<b><img src="img/locked 2.png" alt=""></b>
-			<input type="password" placeholder="忘记密码" class="wide text">
+			<input name="pw" id="password" type="password" placeholder="输入密码" class="wide text"/>
 	
-			<button type="submit" class="wide backgroundcolor middle">登陆</button>
+			<button name="submit" type="submit" class="wide backgroundcolor middle">登陆</button>
 			
 	
 			<a href="">忘记密码?</a>
